@@ -16,7 +16,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: dir.c,v 1.109.2.15 2004/05/09 19:01:27 iliaa Exp $ */
+/* $Id: dir.c,v 1.109.2.16 2004/05/11 13:34:31 iliaa Exp $ */
 
 /* {{{ includes/startup/misc */
 
@@ -391,8 +391,12 @@ PHP_FUNCTION(glob)
 			 * doesn't. This ensure that if no match is found, an empty array
 			 * is always returned so it can be used without worrying in e.g.
 			 * foreach() */
+#if __linux__
+			RETURN_FALSE;
+#else
 			array_init(return_value);
 			return;
+#endif
 		}
 #endif
 		RETURN_FALSE;
